--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <nav>
             <a href="index.html">Início</a>
-            <a href="">Nossa estrutura</a>
-            <a href="">Modalidades</a>
-            <a href="">Planos</a>
+            <a href="#carousel-banner">Nossa estrutura</a>
+            <a href="#modalidades">Modalidades</a>
+            <a href="#planos">Planos</a>
             <button class="main-button">Matricule-se</button>
         </nav>
     </header>
@@ -54,21 +54,17 @@
             <h2>Modalidades em destaque</h2>
             <div class="card-container">
                 <div class="card-modalidade">
-                    <img src="" alt="imagem">
-                    <h3>Musculação</h3>
-                </div>
-            </div>
-
-            <div class="card-container">
-                <div class="card-modalidade">
-                    <img src="" alt="imagem">
+                    <img src="assets/images/modalidade1.jpg" alt="imagem">
                     <h3>Condicionamento Físico</h3>
                 </div>
-            </div>
-
-            <div class="card-container">
+   
                 <div class="card-modalidade">
-                    <img src="" alt="imagem">
+                    <img src="assets/images/modalidade2.jpg" alt="imagem">
+                    <h3>Musculação</h3>
+                </div>
+
+                <div class="card-modalidade">
+                    <img src="assets/images/modalidade3.jpg" alt="imagem">
                     <h3>Spinning</h3>
                 </div>
             </div>
@@ -87,9 +83,10 @@
                         <li>Sem multas ou taxas de cancelamento</li>
                         <li>Acesso á nosso estacionamento</li>
                     </ul>
+                    <button class="main-button">Matricule-se já!</button>
                 </div>
 
-                <div class="card-plano">
+                <div class="card-plano card-especial">
                     <h3>Anual</h3>
                     <h4>R$ 99,99/mês</h4>
                     <ul>
@@ -98,6 +95,7 @@
                         <li>Sem multas ou taxas de cancelamento</li>
                         <li>Acesso á nosso estacionamento</li>
                     </ul>
+                    <button class="main-button">Matricule-se já!</button>
                 </div>
 
                 <div class="card-plano">
@@ -109,6 +107,7 @@
                         <li>Sem multas ou taxas de cancelamento</li>
                         <li>Acesso á nosso estacionamento</li>
                     </ul>
+                    <button class="main-button">Matricule-se já!</button>
                 </div>
             </div>
         </section>
@@ -123,22 +122,18 @@
                     <p>Gonzaga - Santos, SP</p>
                     <p>CEP: 11050-030</p>
                 </div>
-            </div>
 
-            <div class="card-container">
                 <div class="card-info">
                     <h3>Horários de funcionamento</h3>
                     <p>Segunda á Sexta-feira: 6h às 23h</p>
                     <p>Sábado e feriados: 8h às 14h</p>
                 </div>
-            </div>
 
-            <div class="card-container">
                 <div class="card-info">
                     <h3>Redes sociais</h3>
-                    <a href=""><img src="" alt="instagram"></a>
-                    <a href=""><img src="" alt="tiktok"></a>
-                    <a href=""><img src="" alt="facebook"></a>
+                    <a href=""><img src="assets/images/instagram.svg" alt="instagram"></a>
+                    <a href=""><img src="assets/images/tiktok.svg" alt="tiktok"></a>
+                    <a href=""><img src="assets/images/facebook.svg" alt="facebook"></a>
                 </div>
             </div>   
             
